現状.
